# Android-Allegro-Sample

app/: build.gradle
app/src/androidTest/java/me/kishankumar/allegro/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/allegro_jni_includes/: allegro.cmake
app/src/main/allegro_jni_includes/jniIncludes/allegro5/platform/: alplatf.h
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/cpp/core/: Actor.h  App.h
app/src/main/java/me/kishankumar/allegro/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/me/kishankumar/allegro/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
